# geant4-tutorial

./: .gitignore  README.md
001/: CMakeLists.txt  compile.sh  main.cpp  tutorial.cpp  tutorial001.cpp
002/: CMakeLists.txt  compile.sh  main.cpp  muons.mac  run.mac  tutorial002.cpp  vis.mac
003/: compile.sh  tutorial003.cpp
004/: compile.sh
004/source/: MyDetector.cpp
005/: main.cpp
005/macros/: muons.mac
005/source/: MyDetector.cpp
006/: compile.sh  main.cpp
006/source/: MyDetector.cpp  MyDetector.h
007/macros/: photons.mac
007/source/: MyDetector.cpp  MyPrimaryGenerator.h
008/source/: MyDetector.cpp  MyPrimaryGenerator.cpp  MySensorDetector.cpp
009/: compile.sh  main.cpp
009/macros/: muons.mac  photons.mac
009/source/: MyActionInitialization.cpp  MyActionInitialization.h  MyDetector.cpp
010/: compile.sh  main.cpp
010/source/: MyEventAction.cpp  MyEventAction.h  MyHit.cpp  MyHit.h  MyPrimaryGenerator.cpp  MyRunAction.cpp  MyRunAction.h  MySensorDetector.cpp  MySensorDetector.h
